[build-system]
    requires = ["setuptools >= 82.0.1"]
    build-backend = "setuptools.build_meta"

[project]
    name="cbxp"
    version="0.0.3"
    requires-python = ">= 3.13"
    authors = [
        { name = "Leonard J. Carcaramo Jr", email = "lcarcaramo@ibm.com" },
        { name = "Elijah Swift", email = "elijah.swift@ibm.com" },
        { name = "Varun Chennamadhava", email = "varunchennamadhava@gmail.com" },
    ]
    maintainers = [
        { name = "Leonard J. Carcaramo Jr", email = "lcarcaramo@ibm.com" },
        { name = "Elijah Swift", email = "elijah.swift@ibm.com" },
        { name = "Varun Chennamadhava", email = "varunchennamadhava@gmail.com" },
    ]
    description="A unified and standardized interface for extracting z/OS control block data."
    readme = "README.md"
    license = "Apache-2.0"
    classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "Operating System :: POSIX :: Other",
        "Programming Language :: C",
        "Programming Language :: C++",
        'Programming Language :: Python',
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        'Programming Language :: Python :: 3 :: Only',
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: System :: Hardware :: Mainframes",
        "Topic :: System :: Systems Administration",
    ]

[project.urls]
    Homepage = "https://ambitus.github.io/cbxp/"
    Documentation = "https://ambitus.github.io/cbxp/interfaces/python/"
    Source = "https://github.com/ambitus/cbxp"
    Issues = "https://github.com/ambitus/cbxp/issues"
    "Release Notes" = "https://ambitus.github.io/cbxp/release_notes/"

[tool.setuptools.packages.find]
    where = ["python"]
    include = ["cbxp"]

[tool.setuptools.package-data]
    cbxp = ["LICENSE", "NOTICES"]

[tool.ruff.lint]
    # Ruff by default is not very aggressive, only enforcing a few rulesets like E and F.
    # To ensure well organized code a bunch more rulesets have been enabled
    select = [
        "ERA", # Checks for commented out code
        "E", 
        "F", 
        "B", 
        "EM", # Error messages and exceptions
        "SIM", # Comes with suggestions on simplifying things
        "N",  # Checks if code conforms to the PEP8 naming conventions
        "PLE", 
        "UP", 
        "TRY", # Best practices for try-except
        "FLY", # Checks for string joins
        "I",  # Comes with suggestions on organizing imports
        "COM", # Checks for missing commas and unnecessary 
        "A", 
    ]
